feat: add dockerfile and docker compose